BusOne01/src/objects/BOT_Drug_Access__c.object
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is used to store the drug access percentage.</description>
    <fields>
        <fullName>BOT_Access_Percentage__c</fullName>
        <description>Used to store the Access Perchentage</description>
        <label>Access Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup relationship to Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Drug Access</relationshipLabel>
        <relationshipName>Drug_Access</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Drug_Status__c</fullName>
        <description>To store the drug status.</description>
        <label>Drug Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Drug_Rx_Lives__c</fullName>
        <description>Used to store the formulary drug Rx lives.</description>
        <label>Formulary Drug Rx Lives</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product_ID__c</fullName>
        <description>To store the BOT Formulary Product (Drug) ID. It is used for BOT internal reference.</description>
        <label>Formulary Product ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup relationship to formulary product (Drug) object.</description>
        <label>Drug Name</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipLabel>Drug Access</relationshipLabel>
        <relationshipName>Drug_Access</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Total_Plan_Rx_Lives__c</fullName>
        <description>Used to store the BOT total plan Rx lives</description>
        <label>Total Plan Rx Lives</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Drug Access</label>
    <nameField>
        <label>Market</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Access</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>